# nourl

./: .env  .env.example  .gitignore  CNAME  Cargo.toml  README.md  index.html  package.json
assets/: index.11897396.js  index.1393504b.js  index.1645da0c.css  index.2c4ae91b.css  index.49cdbc5f.css  index.5ac0464f.js  index.5d24274b.js  index.66a3c9d5.css  index.67396ecd.js  index.6c940564.js  index.6cd34b04.js  index.6dd218ef.css  index.76c5da89.css  index.77a6a273.css  index.84e08f14.js  index.8e325f25.js  index.99b68508.js  index.9b50c0c6.js  index.af642833.js  index.b89832af.css  index.cd3738db.js  index.d4a7c990.js  index.d5830dad.js  index.db020600.css  index.ffbd2943.js  vendor.0d29fbf7.js  vendor.b634a00e.js  vendor.edc7a863.js
frontend/: .eslintrc.json  Cargo.toml  index.html  package.json  tsconfig.json
frontend/src/: App.scss  App.tsx  config.rs  lib.rs  main.rs  main.tsx
frontend/src/assests/: global.d.ts  images.tsx
frontend/src/pages/: Home.tsx  MyUrl.tsx  MyUrls.tsx  NoPage.tsx  Profile.tsx
frontend/src/scss/: _index.scss  _variables.scss
frontend/src/services/: AuthService.tsx  UrlService.tsx  (+2 more)
services/: Cargo.toml
services/migrations/2022-03-17-104201_init-db/: down.sql  up.sql
services/migrations/2022-03-19-124435_nullable-email/: down.sql  up.sql
services/src/: config.rs  cors.rs  errors.rs  lib.rs  main.rs  schema.rs
services/src/auth/: mod.rs  user_info.rs
services/src/db/: url.rs  user.rs
services/src/models/: mod.rs  url.rs  user.rs
services/src/routes/: mod.rs  url.rs  user.rs
src/: app.rs  lib.rs  main.rs
(+46 files in other folders)
