[package]
name = "services"
version = "0.1.0"
edition = "2021"
default-run = "services"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
dotenv = "0.15"
diesel = { version = "1.4.8", features = ["postgres", "r2d2", "chrono"] }
