[package]
name = "services"
version = "0.1.0"
edition = "2021"
default-run = "services"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
urlencoding = "2.1.0"
serde = "1.0"
dotenv = "0.15"
diesel = { version = "1.4.8", features = ["postgres", "r2d2", "chrono"] }
chrono = "0.4.19"
rustflake = "0.1.1"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.2"
reqwest = { version = "0.11.10", features = ["json"] }
